Use latest version of collect-core, support upload .collect files

--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -3,7 +3,7 @@
 	<div class="upload-form-section text-center" style="width: 100%">
 		<form  method="post" enctype="multipart/form-data" action="rest/collect/data.json">
 			<button type="button" class="btn btn-default" name="upload-btn">Upload backup file</button>
-		    <input type="file" name="file" style="display:none" accept=".zip" />		    		    
+		    <input type="file" name="file" style="display:none" accept=".zip,.collect" />
 		</form>	
 	</div>
 	
