started new error settings page

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -61,7 +61,7 @@
 				 				</div>
 				 				<div class="col-md-6 no-padding height50">
 <!-- 				 					<button type="button" class="btn btn-home calculation-steps-required" href="error-calc.html"> -->
-				 					<button type="button" class="btn btn-home error-button" href="error-calc.html">
+				 					<button type="button" class="btn btn-home error-button" href="error-settings.html">
 					 					<img alt="" src="img/cv.png">
 					 				</button>
 				 				</div>
@@ -201,7 +201,8 @@
 			</div>
 			<div class="col-md-3">
 				<div class="logo">
-					<img src="img/of-logo.png" width="30em">pen Foris Calc
+					<img src="img/of_calc_logo.png" width="30em">pen Foris Calc
+<!-- 					<img src="img/of-logo.png" width="30em">pen Foris Calc -->
 				</div>
 				<div class="application-version"></div>
 			</div>
@@ -498,7 +499,8 @@
 	<script src="./js/calc/manager/ui/calculation-step-exec-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-results-manager.js"></script>
 	<script src="./js/calc/manager/ui/home-data-manager.js"></script>
-	<script src="./js/calc/manager/ui/error-calculation-manager.js"></script>
+<!-- 	<script src="./js/calc/manager/ui/error-calculation-manager.js"></script> -->
+	<script src="./js/calc/manager/ui/error-settings-manager.js"></script>
 	<script src="./js/calc/manager/ui/equation-list-manager.js"></script>
 	
 	
