defined ui for error settings

--- a/calc-webapp/src/main/webapp/error-settings.html
+++ b/calc-webapp/src/main/webapp/error-settings.html
@@ -5,11 +5,11 @@
 			<div class="width100"> Quantity </div>
 		</div>
 		<div class="col-md-8 error-settings">			
-			<div class="col-md-3 col-md-offset-1 aoi height100">
+			<div class="col-md-5 col-md-offset-1 aoi height100">
 				<div class="width100"> Area of Interest </div>
 <!-- 				<select class="form-control width75" name="aoi-select"></select> -->
 			</div>	
-			<div class="col-md-3 category height100">
+			<div class="col-md-5 category height100">
 				<div class="width100"> Category </div>
 			</div>
 		</div>
@@ -20,7 +20,7 @@
 <!-- 			<div class="width100"> Category classes </div> -->
 <!-- 		</div> -->
 	</div>
-	<div class="row width100 no-margin no-padding view-btn height20" style="padding-top: 25px">
+	<div class="row width100 no-margin no-padding save-btn height20" style="padding-top: 25px">
 		<button type="submit" class="btn btn-default col-md-offset-5 col-md-2 ">
 			Save
 		</button>
