--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -214,12 +214,17 @@
 	<div class="modal fade" id="job-status">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<div class="modal-header">
-					<h4 class="modal-title status"></h4>
+				<div class="modal-header col-md-12">
+					<h4 class="modal-title status col-md-10"></h4>	
+					<div class="col-md-2 download-r-code">
+						<button class="btn no-background col-md-10">
+							<i class="fa fa-download"><img src="img/Rlogo.jpg" width="20px" height="20px"></i>
+						</button>
+					</div>				
 				</div>
-				<div class="modal-body">
-					<div class="task-section"></div>
-					<div class="row log-section">
+				<div class="modal-body col-md-12">
+					<div class="task-section col-md-12"></div>
+					<div class="row log-section col-md-12">
 						<div class="col-md-2">
 							<button type="button" class="btn option-btn-selected toggle-log-btn">Log</button>
 						</div>
