error settings save/import/export implemented

--- a/calc-webapp/src/main/webapp/error-settings.html
+++ b/calc-webapp/src/main/webapp/error-settings.html
@@ -1,4 +1,4 @@
-<div class="page-section" id="error-calculation">
+<div class="page-section" id="error-settings">
 
 	<div class="row no-margin no-padding form height60" style="padding-top: 20px; overflow: hidden;">
 		<div class="col-md-4 quantity height100">
@@ -7,38 +7,23 @@
 		<div class="col-md-8 error-settings">			
 			<div class="col-md-5 col-md-offset-1 aoi height100">
 				<div class="width100"> Area of Interest </div>
-<!-- 				<select class="form-control width75" name="aoi-select"></select> -->
 			</div>	
 			<div class="col-md-5 category height100">
 				<div class="width100"> Category </div>
 			</div>
 		</div>
-<!-- 		<div class="col-md-3 category height100"> -->
-<!-- 			<div class="width100"> Category </div> -->
-<!-- 		</div> -->
-<!-- 		<div class="col-md-3 classes height100"> -->
-<!-- 			<div class="width100"> Category classes </div> -->
-<!-- 		</div> -->
+
 	</div>
 	<div class="row width100 no-margin no-padding save-btn height20" style="padding-top: 25px">
 		<button type="submit" class="btn btn-default col-md-offset-5 col-md-2 ">
 			Save
 		</button>
 	</div>
-<!-- 	<div class="row no-margin no-padding result height20"> -->
-<!-- 		<div class="col-md-10 col-md-offset-1"> -->
-<!-- 			<table class="table table-results"> -->
-<!-- 		        <thead> -->
-<!-- 		        </thead> -->
-<!-- 		        <tbody> -->
-<!-- 		        </tbody> -->
-<!-- 	     	</table> -->
-<!-- 		</div> -->
-<!-- 	</div> -->
-	
+
 	<script>
 	$(function() {
-		var manager = new ErrorSettingsManager( $("#error-calculation") );
+		var manager = new ErrorSettingsManager( $("#error-settings") );
 	});
 	</script>
+	
 </div>
