--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -215,7 +215,9 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header col-md-12">
-					<h4 class="modal-title status col-md-10"></h4>	
+					<div class="col-md-offset-2 col-md-8">
+						<h4 class="modal-title status"></h4>
+					</div>	
 					<div class="col-md-2 download-r-code">
 						<button class="btn no-background col-md-10">
 							<i class="fa fa-download"><img src="img/Rlogo.jpg" width="20px" height="20px"></i>
