--- a/calc-webapp/src/main/webapp/error-settings.html
+++ b/calc-webapp/src/main/webapp/error-settings.html
@@ -1,20 +1,27 @@
 <div class="page-section" id="error-settings">
-
-	<div class="row no-margin no-padding form height90" style="padding-top: 20px; overflow: hidden;">
-		<div class="col-md-4 quantity height100">
-			<div class="width100"> Quantity </div>
-		</div>
-		<div class="col-md-8 error-settings height100" style="overflow: hidden;">			
-			<div class="col-md-5 col-md-offset-1 aoi height100">
-				<div class="width100 height5"> Area of Interest </div>
-				<div class="button-container height95" style="overflow: auto"></div>
-			</div>	
-			<div class="col-md-5 category height100" >
-				<div class="width100  height5"> Category </div>
-				<div class="button-container height95" style="overflow: auto"></div>
+	<div class="row width100 no-margin no-padding save-btn height90" style="padding-top: 20px; overflow: hidden;">
+		<div class="col-md-6 no-margin no-padding height100">
+			<div class="col-md-12 height10">Error script</div>
+			<div class="col-md-12 height90">
+				<textarea name="error-r-script" style="width: 100%; height: 100%;"></textarea>
 			</div>
 		</div>
-
+		<div class="col-md-6 no-margin no-padding form height100" style="overflow: hidden;">
+			<div class="col-md-4 quantity height100">
+				<div class="width100"> Quantity </div>
+			</div>
+			<div class="col-md-8 error-settings height100" style="overflow: hidden;">			
+				<div class="col-md-5 col-md-offset-1 aoi height100">
+					<div class="width100 height5"> Area of Interest </div>
+					<div class="button-container height95" style="overflow: auto"></div>
+				</div>	
+				<div class="col-md-5 category height100" >
+					<div class="width100  height5"> Category </div>
+					<div class="button-container height95" style="overflow: auto"></div>
+				</div>
+			</div>
+	
+		</div>
 	</div>
 	<div class="row width100 no-margin no-padding save-btn height10" style="padding-top: 25px">
 		<button type="submit" class="btn btn-default col-md-offset-5 col-md-2 ">
