replacing r editor with codemirror

--- a/calc-webapp/src/main/webapp/error-settings.html
+++ b/calc-webapp/src/main/webapp/error-settings.html
@@ -1,9 +1,9 @@
 <div class="page-section" id="error-settings">
-	<div class="row width100 no-margin no-padding save-btn height90" style="padding-top: 20px; overflow: hidden;">
+	<div class="row width100 no-margin no-padding height90" style="padding-top: 20px; overflow: hidden;">
 		<div class="col-md-6 no-margin no-padding height100">
 			<div class="col-md-12 height10">Error script</div>
 			<div class="col-md-12 height90">
-				<textarea name="error-r-script" style="width: 100%; height: 100%;"></textarea>
+				<textarea id="error-r-script" style="width: 100%; height: 100%;"></textarea>
 			</div>
 		</div>
 		<div class="col-md-6 no-margin no-padding form height100" style="overflow: hidden;">
