added error script customizable by users.

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -26,6 +26,8 @@
 	<link rel="stylesheet" href="css/codemirror/codemirror.css">
 <!-- 	<link rel="stylesheet" href="css/codemirror/theme/neo.css"> -->
 	<link rel="stylesheet" href="css/codemirror/theme/elegant.css">
+	<link rel="stylesheet" href="css/codemirror/theme/neat.css">
+	<link rel="stylesheet" href="js/codemirror/addon/fold/foldgutter.css">
 	<link rel="stylesheet" href="js/codemirror/addon/hint/show-hint.css">
 	<link rel="stylesheet" href="css/calc/r-editor.css">
 	
@@ -187,10 +189,10 @@
 			</div>
 			<div class="col-md-3">
 				<div class="logo">
-					<img src="img/of_calc_logo.png" width="30em">pen Foris Calc
+					CA<img src="img/of_calc_logo.png" width="40em">LC
 <!-- 					<img src="img/of-logo.png" width="30em">pen Foris Calc -->
+					<div class="application-version"></div>
 				</div>
-				<div class="application-version"></div>
 			</div>
 		</div>
 	</footer>
