--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -241,7 +241,8 @@
 			<div class="modal-content">
 				<div class="modal-body calculation">
 					<form class="form-vertical" method="POST">
-						<input type="hidden" class="form-control" name="entityId" /> 
+						<input type="hidden" class="form-control" name="entityId" />
+						<input type="hidden" class="form-control" name="type" />  
 						<fieldset>
 							<div class="form-group" style="margin: 10px 4em 0px 4em">
 								<label class="control-label">Name</label>
