added activate/deactivate calc step. added count of active steps to home page. updated r editor in calc step edit

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -18,7 +18,8 @@
    	<link rel="stylesheet" href="css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="css/bootswatch.min.css">
 	<link rel="stylesheet" href="css/font-awesome-3.2.1.min.css">
-	<link rel="stylesheet" href="css/font-awesome-4.0.3.min.css">
+	<link rel="stylesheet" href="css/font-awesome-4.2.0.min.css">
+<!-- 	<link rel="stylesheet" href="css/font-awesome-4.0.3.min.css"> -->
 	<link rel="stylesheet" href="css/twitter-typeahead.css">
 	<link rel="stylesheet" href="css/bootstrap-combobox.css">
 	<link rel="stylesheet" href="css/calc-bootstrap-combobox.css">
@@ -93,7 +94,7 @@
 	  				</ul>
 	  				<ul style="display: none">
 	  					<li class="ui-state-default calculation-step template">
-				 			<button type="button" class="btn btn-default btn-home"></button>
+				 			<button type="button" class="btn btn-default btn-home"><div class="height100 width100 text"></div></button>
 	  					</li>
 	  				</ul>
 	 			</div>
