--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -17,6 +17,7 @@
 	
 		<form id="step-form" class="form-horizontal width100" method="POST" action="rest/calculationstep/save.json">
 			<input type="hidden" class="form-control" name="id" /> 
+			<input type="hidden" class="form-control" name="active" value="true" /> 
 			<div class="row col-md-8 col-md-offset-2">
 <!-- 				<fieldset class="width100"> -->
 					<div class="form-group">
