added text variables to data table visualization

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -275,9 +275,12 @@
 					  			data-toggle="tooltip" data-placement="top" title="Quantitative variables"  data-trigger="hover" data-animation="false" data-delay="0">Q</button>
 					  		<button class="btn blue-btn workspace-enabled" name="c-btn"
 					  			data-toggle="tooltip" data-placement="top" title="Categorical variables"  data-animation="true" data-delay="0">C</button>
+				  			<button class="btn blue-btn workspace-enabled" name="t-btn"
+					  			data-toggle="tooltip" data-placement="top" title="Text variables"  data-animation="true" data-delay="0">T</button>
 					  	</div>
-					  	<div class="quantities width100"></div>
-					  	<div class="categories width100"></div>
+					  	<div class="quantities variables width100"></div>
+					  	<div class="categories variables width100"></div>
+					  	<div class="texts variables width100"></div>
 					  	<div class="view-results-btn height10">
 					  		<button class="btn btn-default workspace-enabled">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
@@ -296,8 +299,8 @@
 					  		<button class="btn blue-btn workspace-enabled" name="c-btn"
 					  			data-toggle="tooltip" data-placement="top" title="Categorical variables"  data-animation="true" data-delay="0">C</button>
 					  	</div>
-					  	<div class="quantities width100"></div>
-					  	<div class="categories width100"></div>
+					  	<div class="quantities variables width100"></div>
+					  	<div class="categories variables width100"></div>
 					  	<div class="view-results-btn height10">
 					  		<button class="btn btn-default workspace-enabled">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
