--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -28,18 +28,18 @@
 						</div>
 					</div>
 					<!-- srs or systematic -->
-					<div class="row option step step-1" >
-						<div class="row">
-							<div class="col-md-6">
-								<button class="btn" name="srs">Simple random</button>
-							</div>
-							<div class="col-md-6">
-								<button class="btn" name="systematic">Systematic</button>
-							</div>
-						</div>
-					</div>
+<!-- 					<div class="row option step step-1" > -->
+<!-- 						<div class="row"> -->
+<!-- 							<div class="col-md-6"> -->
+<!-- 								<button class="btn" name="srs">Simple random</button> -->
+<!-- 							</div> -->
+<!-- 							<div class="col-md-6"> -->
+<!-- 								<button class="btn" name="systematic">Systematic</button> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 					<!-- 2 phases -->					
-					<div class="row option step step-2 height100">
+					<div class="row option step step-1 height100">
 						<div class="row height25">
 							<div class="col-md-6 col-md-offset-3">
 								<button class="btn" name="twoPhases">2 phases</button>
@@ -78,7 +78,7 @@
 						</div>
 					</div>
 					<!-- strata -->
-					<div class="row option step step-3">
+					<div class="row option step step-2">
 						<div class="row height25">
 							<div class="col-md-6 col-md-offset-3">
 								<button class="btn" name="stratified">Stratified</button>
@@ -101,7 +101,7 @@
 						
 					</div>
 					<!-- cluster -->
-					<div class="row option step step-4">
+					<div class="row option step step-3">
 						<div class="row height25">
 							<div class="col-md-6 col-md-offset-3">
 								<button class="btn" name="cluster">Cluster</button>
@@ -115,7 +115,7 @@
 						
 					</div>
 					<!-- aoi -->
-					<div class="row option step step-5 height100">
+					<div class="row option step step-4 height100">
 						<div class="row height25">
 							<div class="col-md-6 col-md-offset-3">
 								Area of Interest column join
@@ -132,7 +132,7 @@
 <!-- 						</div> -->
 					</div>
 					<!-- plot weigth script -->
-					<div class="row option step step-6 height100">
+					<div class="row option step step-5 height100">
 						<div class="row height25">
 							<div class="col-md-6 col-md-offset-3">
 								Sampling unit weight script
