added user defined categories editor

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -531,7 +531,8 @@
 <!-- 	<script src="./js/calc/manager/ui/error-calculation-manager.js"></script> -->
 	<script src="./js/calc/manager/ui/error-settings-manager.js"></script>
 	<script src="./js/calc/manager/ui/equation-list-manager.js"></script>
-	
+	<script src="./js/calc/manager/ui/category-edit-manager.js"></script>
+	<script src="./js/calc/manager/ui/category-edit-form-manager.js"></script>
 	
 	<!-- settings  -->
 	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
