calculation steps can be grouped by entity in home page

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -110,12 +110,14 @@
 			 				</div>
 		  				</div>
 		 			</div>
-		 			<ul class="calculation-steps-container sortable">
-<!-- 		 				<li class="ui-state-default entity SCRIPT" href="step-edit.html?id=735"> -->
-<!-- 				 			<button type="button" class="btn btn-default btn-home" style="opacity: 1;"> -->
-<!-- 				 				<div class="badge"><i class="icon-5 fa-toggle-on"></i></div> -->
+		 			<ul class="calculation-steps-entity-container no-margin no-padding">
+<!-- 		 				<li class="entity"> -->
+<!-- 				 			<button type="button" class="btn option-btn" style="opacity: 1;"> -->
+<!-- 				 				<div class="badge"><i class="fa fa-eye-slash"></i></div> -->
 <!-- 				 				<div class="height100 width100 text">Tree</div></button> -->
 <!-- 	  					</li> -->
+	  				</ul>
+		 			<ul class="calculation-steps-container sortable">
 	  				</ul>
 	  				<ul style="display: none">
 	  					<li class="ui-state-default calculation-step template">
