fixed ui for calc steps view settings

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -190,7 +190,7 @@
 			  		</div>
 		  			<div class="row group-buttons">
 		 				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" 
-		 					href="workspace-list.html">Active:<div class="active-workspace-label"></div></button>
+		 					href="workspace-list.html"><div class="active-workspace-label"></div></button>
 		 					
 	 					<button type="button" class="btn btn-default settings-btn workspace-required export-workspace"><i class="fa fa-download icon-3"></i>&nbsp;Export</button>
 	 					
