--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -104,7 +104,7 @@
 				 				</button>
 			 				</div>
 			 				<div class="col-md-12 no-padding height50">
-			 					<button type="button" class="btn options-section-btn">
+			 					<button type="button" class="btn options-section-btn workspace-required">
 			 						<i class="fa fa-cog icon-5"></i>
 				 				</button>
 			 				</div>
@@ -189,7 +189,7 @@
 			  			</div>
 			  		</div>
 		  			<div class="row group-buttons">
-		 				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" 
+		 				<button type="button" class="btn btn-default btn-home settings-btn" 
 		 					href="workspace-list.html"><div class="active-workspace-label"></div></button>
 		 					
 	 					<button type="button" class="btn btn-default settings-btn workspace-required export-workspace"><i class="fa fa-download icon-3"></i>&nbsp;Export</button>
@@ -564,6 +564,7 @@
 	<script src="./js/calc/manager/ui/phase1-manager.js"></script>
 	<script src="./js/calc/manager/ui/cluster-manager.js"></script>
 	<script src="./js/calc/manager/ui/aoi-join-manager.js"></script>
+	<script src="./js/calc/manager/ui/home-settings-manager.js"></script>
 	<script src="./js/calc/manager/ui/workspace-settings-manager.js"></script>
 	
 </body>
