disabled clone ws button

--- a/calc-webapp/src/main/webapp/workspace-list.html
+++ b/calc-webapp/src/main/webapp/workspace-list.html
@@ -3,12 +3,12 @@
 	<div class="row no-margin workspace-list">
 	</div>
 	<div class="row no-margin ">
-		<div class="col-md-2 col-md-offset-3">
+		<div class="col-md-2 col-md-offset-4">
 			<button type="button" class="btn btn-default width100" name="activate-btn">Activate</button>
 		</div>
-		<div class="col-md-2">
-			<button type="button" class="btn btn-default width100" name="clone-btn" disabled="disabled">Clone</button>
-		</div>
+<!-- 		<div class="col-md-2"> -->
+<!-- 			<button type="button" class="btn btn-default width100" name="clone-btn" disabled="disabled">Clone</button> -->
+<!-- 		</div> -->
 		<div class="col-md-2">
 			<button type="button" class="btn btn-default width100" name="delete-btn">Delete</button>
 		</div>
