added validation to collect and ws import

--- a/calc-webapp/src/main/webapp/workspace-list.html
+++ b/calc-webapp/src/main/webapp/workspace-list.html
@@ -10,6 +10,7 @@
 			<form  method="post" enctype="multipart/form-data" action="rest/collect/data.json">
 <!-- 				<button type="button" class="btn btn-default" name="upload-btn">Upload backup file</button> -->
 				<button type="button" class="btn btn-default width100" name="upload-btn">Upload collect backup</button>
+				<input type="hidden" name="workspaceId" />
 			    <input type="file" name="file" style="display:none" accept=".zip,.collect" />
 			</form>
 		</div>
