added tree layout to show entity hierarchy

--- a/calc-webapp/src/main/webapp/workspace-list.html
+++ b/calc-webapp/src/main/webapp/workspace-list.html
@@ -1,8 +1,10 @@
 <div class="page-section" id="workspace-edit-settings">
 	
-	<div class="row no-margin workspace-list">
+	<div class="row no-margin workspace-list height20">
 	</div>
-	<div class="row no-margin workspace-list-buttons">
+	<div class="row no-margin workspace-tree height70">
+	</div>
+	<div class="row no-margin workspace-list-buttons height10">
 		<div class="col-md-2 col-md-offset-3">
 			<button type="button" class="btn btn-default width100" name="activate-btn">Activate</button>
 		</div>
