updated all formulas with new r editor. updated aggregation ui

--- a/calc-webapp/src/main/webapp/aggregation.html
+++ b/calc-webapp/src/main/webapp/aggregation.html
@@ -1,6 +1,6 @@
 <div class="page-section">
 
-	<div class="col-md-8 col-md-offset-2" style="text-align: left; padding-top: 20px;" id="aggregation-settings">
+	<div class="col-md-8 col-md-offset-2 height100" style="text-align: left; padding-top: 20px;" id="aggregation-settings">
 <!-- 		<div class="row col-md-12"> -->
 <!-- 			<div class="form-group"> -->
 <!-- 					<label class="col-md-2 control-label">Sampling Unit</label> -->
@@ -9,20 +9,22 @@
 <!-- 					</div> -->
 <!-- 				</div> -->
 <!-- 		</div> -->
-		<div class="row sampling-unit-section" >
+		<div class="row sampling-unit-section height100" >
 			<div class="col-md-2 no-padding entities">
 			</div>
 			
-			<div class="col-md-9 no-padding aggregate-settings-section">
+			<div class="col-md-9 no-padding aggregate-settings-section height100">
 				
 				<!-- inclusion area settings -->
-				<div class="row no-margin plot-area-section">
-					<div class="row" style="padding-bottom: 2em;">Plot area script (output variable plot_area) </div>
-					<div class="row">
+				<div class="row no-margin plot-area-section height100">
+					<div class="row height10" style="padding-bottom: 2em; text-align: center;">Plot area script (output variable plot_area)</div>
+					<div class="row height80">
+						<div class="col-md-12 height100" style="text-align: left">
+							<textarea rows="28" cols="" name="plot-area" id="plot-area-script" class="form-control" style="height:100%"></textarea>
+						</div>
 <!-- 						<input type="text" name="plot-area" class="form-control"> -->
-						<textarea rows="28" cols="" name="plot-area" class="form-control"></textarea>
 					</div>
-					<div class="row">
+					<div class="row height10">
 						<div class="col-md-4 col-md-offset-4" style="text-align: center; padding-top: 15px;">
 							<button type="button" name="save-btn" class="btn btn-default width100">Save</button>
 						</div>
