--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -248,7 +248,8 @@
 					</div>	
 					<div class="col-md-2 download-r-code">
 						<button class="btn no-background col-md-10">
-							<i class="fa fa-download"><img src="img/Rlogo.jpg" width="20px" height="20px"></i>
+							<i class="fa fa-download"></i>
+							<img src="img/Rlogo.jpg" width="20px" height="20px">
 						</button>
 					</div>				
 				</div>
