--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -576,6 +576,7 @@
 	<script src="./js/calc/manager/ui/aoi-manager.js"></script>
 	<script src="./js/calc/manager/ui/stratum-manager.js"></script>
 	<script src="./js/calc/manager/ui/phase1-manager.js"></script>
+	<script src="./js/calc/manager/ui/two-stages-manager.js"></script>
 	<script src="./js/calc/manager/ui/cluster-manager.js"></script>
 	<script src="./js/calc/manager/ui/aoi-join-manager.js"></script>
 	<script src="./js/calc/manager/ui/home-settings-manager.js"></script>
