--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -178,7 +178,7 @@
 			  		</div>
 		  			<div class="row group-buttons">
 		 				<button type="button" class="btn btn-default btn-home settings-btn aoi-required" href="sampling-design.html">Sampling design</button>
-		 				<button type="button" class="btn btn-default btn-home settings-btn sampling-design-required" href="aggregation.html">Aggregation</button>
+		 				<button type="button" class="btn btn-default btn-home settings-btn sampling-design-required" href="aggregation.html">Base unit area formula</button>
 	 				</div>
 		  		</div>
 		  		
