--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -22,7 +22,7 @@
 				<div class="col-md-8 height100">
 					<!-- Sampling unit selection -->
 					<div class="row option step step-0 height100">
-						<div class="row">Sampling Unit</div>
+						<div class="row">Base Unit</div>
 						<div class="row">
 							<div class="col-md-12">
 								<select class="form-control" name="sampling-unit"></select>
