--- a/calc-webapp/src/main/webapp/workspace-list.html
+++ b/calc-webapp/src/main/webapp/workspace-list.html
@@ -25,7 +25,7 @@
 <!-- 				<button type="button" class="btn btn-default" name="upload-btn">Upload backup file</button> -->
 				<button type="button" class="btn btn-default width100" name="upload-btn"><i class="fa fa-cloud-upload"></i>&nbsp;Collect</button>
 				<input type="hidden" name="workspaceId" />
-			    <input type="file" name="file" style="display:none" accept=".zip,.collect" />
+			    <input type="file" name="file" style="display:none" accept=".zip,.collect,.collect-data" />
 			</form>
 		</div>
 		<div class="col-md-2">
