two stages updated with # theoretical plots

--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -93,6 +93,11 @@
 								<div class="row area-column">
 									<div class="col-md-6">Area column:</div>
 									<div class="col-md-6"><select class="form-control" name="area-column"></select></div>
+									
+								</div>
+								<div class="row no-base-unit-column">
+									<div class="col-md-6">No base unit column:</div>
+									<div class="col-md-6"><select class="form-control" name="no-base-unit-column"></select></div>
 								</div>
 							</div>
 							
