--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -75,10 +75,16 @@
 					 				</button>
 				 				</div>
 				 				<div class="col-md-6 no-padding height50">
-				 					<button type="button" class="btn btn-home" href="saiku.html">
-					 					<img alt="" src="img/xsaiku_free_small.png" width="50px" height="50px">
+				 					<button type="button" class="btn btn-R" href="">
+										<i class="fa fa-download"></i>
+										<img src="img/R_logo.svg.png" width="20px" height="20px">
 					 				</button>
 				 				</div>
+<!-- 				 				<div class="col-md-6 no-padding height50"> -->
+<!-- 				 					<button type="button" class="btn btn-home" href="saiku.html"> -->
+<!-- 					 					<img alt="" src="img/xsaiku_free_small.png" width="50px" height="50px"> -->
+<!-- 					 				</button> -->
+<!-- 				 				</div> -->
 		  				</div>
 		 			</div>
 		 			<div class="button-bar-right">
@@ -218,16 +224,17 @@
 				<i class="icon-caret-left icon-5"></i>
 				</button>
 			</div>
-			<div class="col-md-6 col-md-offset-1" >
+			<div class="col-md-8" >
 				<div class="links">
 					<button type="button" class="btn calculation" href="#calculation">Calculation</button>
 					<!-- Result section didsabled for now -->
 <!-- 					<button type="button" class="results btn btn-default" href="#results">Results</button> -->
 					<button type="button" class="btn data" href="#data">Data</button>
 					<button type="button" class="btn settings" href="#settings">Settings</button>
+					<button type="button" class="btn btn-saiku" href="saiku.html"><img alt="" src="img/xsaiku_free_small.png" width="30px" height="30px">&nbsp;Saiku</button>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-2">
 				<div class="logo">
 					<img src="img/of_calc_logo.png" width="40em">CALC
 <!-- 					<img src="img/of-logo.png" width="30em">pen Foris Calc -->
@@ -535,6 +542,7 @@
 	
 	<!-- data managers -->
 	<script src="./js/calc/manager/data/workspace-manager.js"></script>
+	<script src="./js/calc/manager/data/processing-chain-manager.js"></script>
 	<script src="./js/calc/manager/data/variable-manager.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-manager.js"></script>
 	<script src="./js/calc/manager/data/job-manager.js"></script>
