working in progress - calc 2.0

--- a/calc-webapp/src/main/webapp/categories.html
+++ b/calc-webapp/src/main/webapp/categories.html
@@ -1,6 +1,6 @@
 <div class="page-section" id="category-edit-page" style="padding-top: 10px">
 
-	<div class="col-md-12 height100" style="overflow: hidden;">
+	<div class="col-md-12 height100">
 	
 		<div class="row col-md-3 list-section height100">
 			<div class="row no-margin no-padding list-header">
